# arcls

./: .gitignore  README.md  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
external_pipeline/: 准备HF数据.py  导出数据.py  评估外部模型.py  评估外部模型_直接.py
src/: 主程序.py  基线模型.py  数据处理.py  模型.py
