[project]
name = "arcls"
version = "0.1.0"
description = "Autoregressive classification POC"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.41.2",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
    "catboost>=1.2.5",
    "numpy>=1.26.4",
    "loguru>=0.7.2",
    "accelerate>=0.30.1",
    "tiktoken>=0.7.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
  "src"
]
